- Fixed timeline overflow on Firefox

--- a/css/genealogy.css
+++ b/css/genealogy.css
@@ -867,8 +867,8 @@ html.exporting .col-md-12 {
   float: right;
   width: 94%;
   padding: 0 20px;
-  overflow: hidden;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 .timeline-nav .play-bar .slider {
   width: 100% !important;
@@ -882,12 +882,20 @@ html.exporting .col-md-12 {
   user-select: none;
   /* Likely future */
 }
-.timeline-nav .play-bar .slider-tick-label {
+.timeline-nav .play-bar .slider .slider-tick-label-container .slider-tick-label {
   font-size: 12px;
 }
 @media (max-width: 979px) {
   .timeline-control {
     margin-bottom: 20px;
+  }
+}
+@-moz-document url-prefix() {
+  .timeline-nav .play-bar {
+    overflow: inherit;
+  }
+  .timeline-nav .play-bar .slider .slider-tick-label-container {
+    overflow: hidden;
   }
 }
 .hidden {
