--- a/less/content/timeline.less
+++ b/less/content/timeline.less
@@ -26,16 +26,18 @@
         float: right;
         width: 94%;
         padding: 0 20px;
-        overflow: hidden;
         text-overflow: ellipsis;
+        overflow: hidden;
 
         .slider {
             width: 100% !important;
             .user-select();
-        }
 
-        .slider-tick-label {
-            font-size: 12px;
+            .slider-tick-label-container {
+                .slider-tick-label {
+                    font-size: 12px;
+                }
+            }
         }
     }
 }
@@ -45,3 +47,18 @@
         margin-bottom: 20px;
     }
 }
+
+@-moz-document url-prefix() { 
+    .timeline-nav {
+        .play-bar {
+            overflow: inherit;
+
+            .slider {
+                .slider-tick-label-container {
+                    overflow: hidden;
+                }
+            }
+        }
+    } 
+}
+
